[td] Fix editor v2 page

--- a/mage_ai/frontend/styles/scss/base/_grid.scss
+++ b/mage_ai/frontend/styles/scss/base/_grid.scss
@@ -293,7 +293,7 @@ $values: (
 
   &.borders-true {
     @include borders.base;
-    border-color: var(--border-color);
+    border-color: var(--borders-color-base-default);
   }
 
   &.borders-transparent-true {
