menu context menu

--- a/mage_ai/frontend/styles/scss/base/_grid.scss
+++ b/mage_ai/frontend/styles/scss/base/_grid.scss
@@ -36,6 +36,12 @@ $values: (
     &.auto-rows-#{$value} {
       grid-auto-rows: $value;
     }
+    &.template-columns-#{$value} {
+      grid-template-columns: $value;
+    }
+    &.template-rows-#{$value} {
+      grid-template-rows: $value;
+    }
   }
 }
 
