drag after context menu

--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -9,7 +9,7 @@
   padding: var(--padding-base);
 }
 
-.blockNodeContainer {
+.showOnHoverContainer {
   &:hover {
     .showOnHover {
       visibility: visible;
