--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -9,6 +9,18 @@
   padding: var(--padding-base);
 }
 
+.showOnHoverContainer {
+  &:hover {
+    .showOnHover {
+      visibility: visible;
+    }
+  }
+
+  .showOnHover {
+    visibility: hidden;
+  }
+}
+
 .nodeWrapper {
   @include grid.base();
 
