--- a/mage_ai/frontend/styles/scss/apps/Canvas/Pipelines/Builder.module.scss
+++ b/mage_ai/frontend/styles/scss/apps/Canvas/Pipelines/Builder.module.scss
@@ -60,6 +60,35 @@
     }
   }
 
+  .block {
+    z-index: 6 !important;
+  }
+
+  &.node {
+    z-index: 4 !important;
+  }
+
+  .connectionLines {
+    z-index: 1;
+
+    .connectionLine {
+      &.connection-from-port-to-port,
+      &.connection-from-port-to-block,
+      &.connection-from-port-to-node,
+      &.connection-from-block-to-block,
+      &.connection-from-block-to-node,
+      &.connection-from-block-to-port,
+      &.connection-from-node-to-block,
+      &.connection-from-node-to-port {
+        z-index: 5;
+      }
+
+      &.connection-from-node-to-node {
+        z-index: 3;
+      }
+    }
+  }
+
   .level {
     opacity: 0;
     pointer-events: none;
