--- a/mage_ai/frontend/styles/scss/base/_grid.scss
+++ b/mage_ai/frontend/styles/scss/base/_grid.scss
@@ -45,11 +45,8 @@ $values: (
   }
 }
 
-@mixin layout(
-$values: (
-  inherit, auto, none, initial, unset
-)) {
-  @each $value in $values {
+@mixin layout() {
+  @each $value in $keyword-values {
     &.height-#{$value} {
       height: $value;
     }
@@ -274,7 +271,7 @@ $values: (
   @include auto-columns-rows;
   @include content-items;
   @include display;
-  @include layout;
+  @include layout();
   @include template;
   @include template-more;
 
@@ -299,6 +296,7 @@ $values: (
 
   &.borders-true {
     @include borders.base;
+    @include borders.border-colors();
     border-color: var(--borders-color-base-default);
   }
 
