added styles for inputs

--- a/mage_ai/frontend/styles/scss/apps/Canvas/Pipelines/Builder.module.scss
+++ b/mage_ai/frontend/styles/scss/apps/Canvas/Pipelines/Builder.module.scss
@@ -16,7 +16,7 @@
   transform-origin: top left;
 
   /* Add outline shadow */
-  box-shadow: 0 0 30px 10px var(--colors-graymd);
+  box-shadow: 0 0 30px 10px var(--blue);
 
   &:before,
   &:after {
