--- a/mage_ai/frontend/styles/scss/abstracts/colors/_light.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/colors/_light.scss
@@ -77,6 +77,7 @@ $backgrounds-scrollbar-thumb-default: #BBAFDA;
 $backgrounds-scrollbar-thumb-hover: #1B006699;
 $backgrounds-scrollbar-track-default: #BBAFDA1A;
 $backgrounds-scrollbar-track-hover: #BBAFDAB3;
+$blue: radial-gradient(155.7% 118.3% at 22.25% 145.77%, $colors-bluelo 0%, rgba($colors-blue, 0.00) 100%), rgba($colors-blue, 0.10);
 $borders-color-base-default: #BBAFDA;
 $borders-color-base-hover: #BBAFDAD9;
 $borders-color-button-base-default: gray;
