fix layout on each level change

--- a/mage_ai/frontend/styles/scss/abstracts/colors/_light.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/colors/_light.scss
@@ -169,6 +169,8 @@ $fonts-color-text-base: #000000;
 $fonts-color-text-blue: #1F6BFF;
 $fonts-color-text-inverted: #FFFFFF;
 $fonts-color-text-muted: #00000099;
+$fonts-color-text-muted: $colors-blacklo;
+$fonts-color-text-secondary: $colors-blackmd;
 $fonts-color-text-warning: $colors-yellow;
 $icons-color-base: #000000;
 $icons-color-inverted: #FFFFFF;
