show loading save

--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -13,12 +13,13 @@
   &.loading {
     .loader {
       display: block;
-      width: 100%;
     }
   }
 
   .loader {
     display: none;
+    position: absolute;
+    width: 100%;
   }
 }
 
