--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -12,13 +12,18 @@
 .blockNodeWrapper {
   &.loading {
     .loader {
-      display: block;
+      visibility: visible;
+      opacity: 1;
     }
   }
 
   .loader {
-    display: none;
-    position: absolute;
+    visibility: hidden;
+    opacity: 0;
+    position: relative;
+    height: 2px;
+    margin-top: 4px;
+    margin-bottom: 2px;
     width: 100%;
   }
 }
