--- a/mage_ai/frontend/styles/scss/abstracts/_variables.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/_variables.scss
@@ -2,6 +2,7 @@ $borders-outline-offset: 1px;
 $borders-outline-width: 2px;
 $borders-radius-base: 10px;
 $borders-radius-round: 40px;
+$borders-radius-md: 16px;
 $borders-radius-sm: 6px;
 $borders-style: solid;
 $borders-width: 1px;
@@ -56,6 +57,7 @@ $margin-sm: 8px;
 $margin-xs: 4px;
 $menus-border-radius-base: 6px;
 $menus-padding-base: 8px 8px;
+$modal-blur-base: 20px;
 $padding-base: 12px;
 $padding-sm: 8px;
 $padding-vertical-base: $buttons-padding-base;
