--- a/mage_ai/frontend/styles/scss/abstracts/colors/_dark.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/colors/_dark.scss
@@ -136,3 +136,5 @@ $scrollbars-background-thumb-default: #34404c;
 $scrollbars-background-thumb-hover: #ffffff80;
 $scrollbars-background-track-default: $colors-graylo;
 $scrollbars-background-track-hover: $colors-graymd;
+$modal-background-color-base: rgba(0, 0, 0, 0.95);
+$modal-box-shadow-base: rgba(0, 0, 0, 0.20);
