--- a/mage_ai/frontend/styles/scss/abstracts/colors/_light.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/colors/_light.scss
@@ -190,3 +190,5 @@ $scrollbars-background-thumb-default: #BBAFDA;
 $scrollbars-background-thumb-hover: #1B006699;
 $scrollbars-background-track-default: #BBAFDA1A;
 $scrollbars-background-track-hover: #BBAFDAB3;
+$modal-background-color-base: rgba(0, 0, 0, 0.95);
+$modal-box-shadow-base: rgba(0, 0, 0, 0.20);
