--- a/mage_ai/frontend/styles/scss/modes/_light.scss
+++ b/mage_ai/frontend/styles/scss/modes/_light.scss
@@ -189,4 +189,6 @@
   --scrollbars-background-thumb-hover: #{colors.$scrollbars-background-thumb-hover};
   --scrollbars-background-track-default: #{colors.$scrollbars-background-track-default};
   --scrollbars-background-track-hover: #{colors.$scrollbars-background-track-hover};
+  --modal-background-color-base: #{colors.$modal-background-color-base};
+  --modal-box-shadow-base: #{colors.$modal-box-shadow-base};
 }
