--- a/mage_ai/frontend/styles/scss/elements/Button/Button.module.scss
+++ b/mage_ai/frontend/styles/scss/elements/Button/Button.module.scss
@@ -4,6 +4,7 @@
   &.loading {
     .overlay {
       background-color: var(--backgrounds-body);
+      border-radius: var(--borders-radius-base);
       opacity: 0.7;
       bottom: 0;
       /* box-shadow: 0px 10px 28px 0px rgba(0, 0, 0, 0.12); */
