editor done working on output

--- a/mage_ai/frontend/styles/scss/base/_typography.scss
+++ b/mage_ai/frontend/styles/scss/base/_typography.scss
@@ -83,7 +83,12 @@
   &.bold {
     font-weight: var(--fonts-weight-bold);
   }
+
+  &.underline {
+    text-decoration: underline;
+  }
 }
+
 @mixin base {
   @include base-styles;
   @include base-font-family;
