--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -56,3 +56,19 @@
 .emptyGroup {
 
 }
+
+.codeExecuted {
+  .outputContainer {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: all;
+    z-index: 6;
+  }
+}
+
+.outputContainer {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  z-index: -1;
+}
