--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/OutputNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/OutputNode.module.scss
@@ -13,4 +13,14 @@
   border-radius: (--borders-radius-md);
   box-shadow: 8px 8px 4px 8px var(--modal-box-shadow-base);
   padding: var(--padding-sm);
+
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+
+  &.executed {
+    opacity: 1;
+    pointer-events: all;
+    visibility: visible;
+  }
 }
