--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -2,6 +2,20 @@
 @use '../../../base/grid';
 @use './mixins' as *;
 
+@mixin hide {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  z-index: -1;
+}
+
+@mixin show {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: all;
+  z-index: 6;
+}
+
 .blockNode {
   border-color: red;
   @include borders.border-colors();
@@ -9,6 +23,7 @@
   height: inherit;
   min-width: 312px;
   padding: var(--padding-base);
+
 }
 
 .blockNodeWrapper {
@@ -17,6 +32,34 @@
       visibility: visible;
       opacity: 1;
     }
+
+    .display-if-loading {
+      display: auto;
+    }
+    .display-ifnot-loading {
+      display: none;
+    }
+
+    .show-if-loading {
+      @include show;
+    }
+    .hide-if-loading {
+      @include hide;
+    }
+  }
+
+  .show-ifnot-loading {
+    @include show;
+  }
+  .hide-ifnot-loading {
+    @include hide;
+  }
+
+  .display-if-loading {
+    display: none;
+  }
+  .display-ifnot-loading {
+    display: auto;
   }
 
   .loader {
