--- a/mage_ai/frontend/styles/scss/abstracts/_variables.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 $borders-outline-offset: 1px;
 $borders-outline-width: 2px;
+$borders-outline-total: calc(var(--borders-outline-offset) + var(--borders-outline-width));
 $borders-radius-base: 10px;
 $borders-radius-round: 40px;
 $borders-radius-md: 16px;
