--- a/mage_ai/frontend/styles/scss/abstracts/_mixins.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/_mixins.scss
@@ -18,3 +18,11 @@
   background-image: -o-linear-gradient($angle, $start-color $start-percentage, $end-color $end-percentage);
   background-image: linear-gradient($angle, $start-color $start-percentage, $end-color $end-percentage);
 }
+
+@function adjust-shade($color, $percentage) {
+  @if $percentage > 0 {
+    @return lighten($color, $percentage);
+  } @else {
+    @return darken($color, -$percentage);
+  }
+}
