add default header items

--- a/mage_ai/frontend/styles/scss/abstracts/_variables.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/_variables.scss
@@ -61,6 +61,7 @@ $menus-padding-base: 8px 8px;
 $modal-blur-base: 20px;
 $padding-base: 12px;
 $padding-sm: 8px;
+$padding-vertical-lg: 16px;
 $padding-vertical-base: $buttons-padding-base;
 $padding-vertical-sm: $buttons-padding-sm;
 $padding-vertical-xs: $buttons-padding-xs;
