--- a/mage_ai/frontend/styles/scss/themes/_base.scss
+++ b/mage_ai/frontend/styles/scss/themes/_base.scss
@@ -62,6 +62,7 @@
   --menus-padding-base: #{$menus-padding-base};
   --padding-base: #{$padding-base};
   --padding-sm: #{$padding-sm};
+  --padding-vertical-lg: #{$padding-vertical-lg};
   --padding-vertical-base: #{$padding-vertical-base};
   --padding-vertical-sm: #{$padding-vertical-sm};
   --padding-vertical-xs: #{$padding-vertical-xs};
