--- a/mage_ai/frontend/styles/scss/components/Menu/NavigationButtonGroup.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Menu/NavigationButtonGroup.module.scss
@@ -7,8 +7,8 @@ $height: 40px;
   position: absolute;
   top: 0;
   bottom: 0;
-  left: -3px; /* Adjust to control how far it extends beyond the boundary */
-  width: 20px; /* Width of the diagonal */
+  left: -10px; /* Adjust to control how far it extends beyond the boundary */
+  width: 40px; /* Width of the diagonal */
   transform: skewX(-24deg); /* Create the diagonal effect */
   z-index: -1; /* Ensure it is behind the button content */
 }
@@ -19,8 +19,8 @@ $height: 40px;
   left: 0;
   position: absolute;
   right: 0; /* Adjust this value to control how far it extends beyond the boundary */
-  top: 0;
-  width: calc(100% + 17px);
+  top: -40px;
+  width: calc(100% + 16px);
   z-index: -1; /* Ensure it is behind the button content */
 }
 
@@ -74,15 +74,10 @@ $height: 40px;
 .selected::before {
   @include bg;
   background: linear-gradient(114deg, #252D35 85%, transparent 85%);
+  width: calc(100% + 40px);
 }
 
 .selected::after {
   @include after;
   background: linear-gradient(114deg, #252D35 85%, transparent 85%);
-}
-
-.selected {
-  &.last::before {
-    width: calc(100% + 34px);
-  }
 }
