--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/BlockNode.module.scss
@@ -21,6 +21,7 @@
   @include borders.border-colors();
 
   height: inherit;
+  min-height: 300px;
   min-width: 312px;
   padding: var(--padding-base);
 
