block group overview

--- a/mage_ai/frontend/styles/scss/elements/GradientContainer.module.scss
+++ b/mage_ai/frontend/styles/scss/elements/GradientContainer.module.scss
@@ -13,6 +13,10 @@
   display: grid;
   justify-items: stretch;
   box-sizing: content-box;
+
+  &.noBorder {
+    border-radius: 0;
+  }
 }
 
 
@@ -24,4 +28,8 @@
   border: none;
   height: inherit;
   overflow: hidden; // To clip children with border-radius
+}
+
+.variant-error {
+  background: linear-gradient(90deg, rgba(255, 59, 59, 0.30) 2.21%, rgba(255, 59, 59, 0.30) 2.51%, rgba(255, 59, 59, 0.00) 29.51%);
 }
