--- a/mage_ai/frontend/styles/scss/abstracts/colors/_light.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/colors/_light.scss
@@ -1,3 +1,5 @@
+$colors-azure: #148EFF;
+$colors-azurelo: #1F6BFF1A;
 $colors-black: #000000;
 $colors-blackfixed: #000000;
 $colors-blacklo: #00000033;
