--- a/mage_ai/frontend/styles/scss/modes/_light.scss
+++ b/mage_ai/frontend/styles/scss/modes/_light.scss
@@ -1,5 +1,7 @@
 @use '../abstracts/colors/light' as colors;
 @mixin mode() {
+  --colors-azure: #{colors.$colors-azure};
+  --colors-azurelo: #{colors.$colors-azurelo};
   --colors-black: #{colors.$colors-black};
   --colors-blackfixed: #{colors.$colors-blackfixed};
   --colors-blacklo: #{colors.$colors-blacklo};
