--- a/mage_ai/frontend/styles/scss/abstracts/_variables.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+$borders-gradient-width: 1px;
 $borders-outline-offset: 1px;
 $borders-outline-width: 2px;
 $borders-outline-total: calc(var(--borders-outline-offset) + var(--borders-outline-width));
