--- a/mage_ai/frontend/styles/scss/modes/_dark.scss
+++ b/mage_ai/frontend/styles/scss/modes/_dark.scss
@@ -1,6 +1,8 @@
 @use '../abstracts/colors/dark' as colors;
 @mixin mode() {
   --colors-azure: #{colors.$colors-azure};
+  --colors-azurehi: #{colors.$colors-azurelo};
+  --colors-azuremd: #{colors.$colors-azurelo};
   --colors-azurelo: #{colors.$colors-azurelo};
   --colors-black: #{colors.$colors-black};
   --colors-blackfixed: #{colors.$colors-blackfixed};
