fixed print outputs

--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/OutputGroups.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/OutputGroups.module.scss
@@ -1,3 +1,11 @@
+@use '../../../base/borders';
+
 .outputContainer {
+  @include borders.base();
+  @include borders.border-colors();
+
+  border-radius: (--borders-radius-md);
+  box-shadow: 8px 8px 4px 8px var(--modal-box-shadow-base);
   min-width: 400px;
+  padding: var(--padding-sm);
 }
