--- a/mage_ai/frontend/styles/scss/abstracts/colors/_light.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/colors/_light.scss
@@ -185,6 +185,8 @@ $inputs-border-color-base-default: #0500FF;
 $inputs-border-color-base-focus: #1F6BFF;
 $inputs-border-color-base-hover: #1F6BFF;
 $inputs-placeholder-color: #00000033;
+$link-color-base: $colors-bluetext;
+$link-color-hover: $colors-bluehi;
 $menus-background-base-default: #BBAFDAB3;
 $menus-background-contained-default: #BBAFDA;
 $menus-blur-base: saturate(100%) blur(3px);
