--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/OutputGroups.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/OutputGroups.module.scss
@@ -1,9 +1,12 @@
+@use '../../../abstracts/variables' as *;
 @use '../../../base/borders';
 
 .outputContainer {
   @include borders.base();
   @include borders.border-colors();
 
+  backdrop-filter: blur(#{$modal-blur-base});
+  background: var(--modal-background-color-base);
   border-radius: (--borders-radius-md);
   box-shadow: 8px 8px 4px 8px var(--modal-box-shadow-base);
   min-width: 400px;
