--- a/mage_ai/frontend/styles/scss/modes/_dark.scss
+++ b/mage_ai/frontend/styles/scss/modes/_dark.scss
@@ -134,6 +134,8 @@
   --inputs-border-color-base-focus: #{colors.$inputs-border-color-base-focus};
   --inputs-border-color-base-hover: #{colors.$inputs-border-color-base-hover};
   --inputs-placeholder-color: #{colors.$inputs-placeholder-color};
+  --link-color-base: #{colors.$link-color-base};
+  --link-color-hover: #{colors.$link-color-hover};
   --menus-background-base-default: #{colors.$menus-background-base-default};
   --menus-background-contained-default: #{colors.$menus-background-contained-default};
   --menus-blur-base: #{colors.$menus-blur-base};
