--- a/mage_ai/frontend/styles/scss/abstracts/colors/_dark.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/colors/_dark.scss
@@ -131,6 +131,8 @@ $inputs-border-color-base-default: #0500ff;
 $inputs-border-color-base-focus: #1f6bff;
 $inputs-border-color-base-hover: #1f6bff;
 $inputs-placeholder-color: #ffffff80;
+$link-color-base: $colors-bluetext;
+$link-color-hover: $colors-bluehi;
 $menus-background-base-default: $colors-graymd;
 $menus-background-contained-default: #34404c;
 $menus-blur-base: saturate(100%) blur(3px);
