--- a/mage_ai/frontend/styles/scss/elements/Link/Link.module.scss
+++ b/mage_ai/frontend/styles/scss/elements/Link/Link.module.scss
@@ -19,7 +19,7 @@
 
   &.activeColorOnHover {
     &:hover {
-      color: var(--link-color-hover) !important;
+      color: var(--fonts-color-text-base) !important;
     }
   }
 }
