--- a/mage_ai/frontend/styles/scss/apps/Canvas/Pipelines/Builder.module.scss
+++ b/mage_ai/frontend/styles/scss/apps/Canvas/Pipelines/Builder.module.scss
@@ -152,3 +152,11 @@
 .path {
   @include svg.fill-stroke-colors();
 }
+
+.lineManager {
+  &.pending {
+    path {
+      opacity: 0;
+    }
+  }
+}
